--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 # Configuration file
 # key = value
+
+# configure your datasource
+quarkus.datasource.url = jdbc:mysql://localhost:3306/voice_plugin
+quarkus.datasource.driver = org.mariadb.jdbc.Driver
+quarkus.datasource.username = root
+quarkus.datasource.password = root
+
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation=update
