--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ repositories {
     mavenCentral()
 }
 
+group "com.nistapp.voice"
+version "0.0.1"
 dependencies {
     implementation enforcedPlatform('io.quarkus:quarkus-bom:0.21.1')
     implementation 'io.quarkus:quarkus-resteasy'
