--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # configure your datasource
 quarkus.datasource.url=jdbc:mysql://localhost:3306/voice_plugin
 quarkus.datasource.driver=org.mariadb.jdbc.Driver
-quarkus.datasource.username=root
-quarkus.datasource.password=root
+quarkus.datasource.username=test
+quarkus.datasource.password=test
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=update
 #
@@ -305,6 +305,7 @@ quarkus.hibernate-orm.database.generation=update
 # The HTTP port
 #
 #quarkus.http.port=8080
+quarkus.http.port=11080
 #
 # The HTTPS port
 #
