--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -256,7 +256,7 @@ quarkus.hibernate-orm.database.generation=update
 #
 # Enable the CORS filter.
 #
-#quarkus.http.cors=false
+quarkus.http.cors=true
 #
 # HTTP headers exposed in CORS
 #
