added user session and click record functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # configure your datasource
 quarkus.datasource.url=jdbc:mysql://localhost:3306/voice_plugin
 quarkus.datasource.driver=org.mariadb.jdbc.Driver
-quarkus.datasource.username=test
-quarkus.datasource.password=test
+quarkus.datasource.username=root
+quarkus.datasource.password=root
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=update
 #
