added the changes for quarkus

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation enforcedPlatform('io.quarkus:quarkus-bom:0.21.1')
     implementation 'io.quarkus:quarkus-resteasy'
     implementation 'io.quarkus:quarkus-resteasy-jsonb'
-    implementation 'io.quarkus:quarkus-hibernate-orm'
     implementation 'io.quarkus:quarkus-jdbc-mariadb'
+    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
 }
 
