--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,13 @@
 pluginManagement {
     repositories {
+        mavenLocal()
         mavenCentral()
         gradlePluginPortal()
     }
     resolutionStrategy {
         eachPlugin {
             if (requested.id.id == 'io.quarkus') {
-                useModule("io.quarkus:quarkus-gradle-plugin:${requested.version}")
+                useModule("io.quarkus:quarkus-gradle-plugin:1.0.0.CR1")
             }
         }
     }
