--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'io.quarkus:quarkus-jdbc-mariadb'
     implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-hibernate-orm-panache'
+    implementation 'io.quarkus:quarkus-hibernate-search-elasticsearch'
+
 //    implementation 'io.quarkus:quarkus-hibernate-orm'
 //    implementation 'org.jboss.jandex:jandex-maven-plugin'
 }
