--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'io.quarkus' version '1.0.0.CR1'
+    id 'io.quarkus' version '1.0.0.CR2'
 }
 
 repositories {
@@ -17,6 +17,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-hibernate-orm-panache'
     implementation 'io.quarkus:quarkus-hibernate-search-elasticsearch'
+    implementation 'io.quarkus:quarkus-flyway'
 
 //    implementation 'io.quarkus:quarkus-hibernate-orm'
 //    implementation 'org.jboss.jandex:jandex-maven-plugin'
