--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,24 @@
 # configure your datasource
 quarkus.datasource.url=jdbc:mysql://localhost:3306/voice_plugin
 quarkus.datasource.driver=org.mariadb.jdbc.Driver
-quarkus.datasource.username=root
-quarkus.datasource.password=root
+quarkus.datasource.username=test
+quarkus.datasource.password=test
 # drop and create the database at startup (use `update` to only update the schema)
 #quarkus.hibernate-orm.database.generation=update
 
 # drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=none
+
+### elastic search by ajay
+
+quarkus.ssl.native=false
+quarkus.hibernate-search.elasticsearch.version=6.8.5
+quarkus.hibernate-search.elasticsearch.analysis.configurer=com.nistapp.voice.index.search.AnalysisConfigurer
+quarkus.hibernate-search.elasticsearch.automatic-indexing.synchronization.strategy=searchable
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-and-create
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
+quarkus.flyway.migrate-at-start=true
+
 #
 # The name of the application.
 # If not set, defaults to the name of the project.
@@ -640,12 +651,3 @@ quarkus.http.port=11080
 # The XA node name used by the transaction manager
 #
 #quarkus.transaction-manager.xa-node-name=
-
-### elastic search by ajay
-
-quarkus.ssl.native=false
-quarkus.hibernate-search.elasticsearch.version=7
-quarkus.hibernate-search.elasticsearch.analysis.configurer=com.nistapp.voice.index.search.AnalysisConfigurer
-quarkus.hibernate-search.elasticsearch.automatic-indexing.synchronization.strategy=searchable
-quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-and-create
-quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
