--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ quarkus.hibernate-search.elasticsearch.automatic-indexing.synchronization.strate
 quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-and-create
 quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
 quarkus.flyway.migrate-at-start=true
+quarkus.log.file.enable=true
+quarkus.log.file.level=WARNING
+quarkus.log.file.path=logs/quarkus.log
 
 #
 # The name of the application.
