added the api changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ quarkus.datasource.url=jdbc:mysql://localhost:3306/voice_plugin
 quarkus.datasource.driver=org.mariadb.jdbc.Driver
 quarkus.datasource.username=test
 quarkus.datasource.password=test
+quarkus.hibernate-orm.dialect = org.hibernate.dialect.MariaDBDialect
 # drop and create the database at startup (use `update` to only update the schema)
 #quarkus.hibernate-orm.database.generation=update
 
@@ -23,6 +24,7 @@ quarkus.flyway.migrate-at-start=true
 quarkus.log.file.enable=true
 quarkus.log.file.level=WARNING
 quarkus.log.file.path=logs/quarkus.log
+
 
 #
 # The name of the application.
