--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuration file
 # key = value
 # configure your datasource
-quarkus.datasource.url=jdbc:mysql://localhost:3306/voice_plugin
+quarkus.datasource.url=jdbc:mysql://localhost:3306/voice_plugin_prod
 quarkus.datasource.driver=org.mariadb.jdbc.Driver
 quarkus.datasource.username=test
 quarkus.datasource.password=test
@@ -327,7 +327,7 @@ quarkus.http.cors=true
 # The HTTP port
 #
 #quarkus.http.port=8080
-quarkus.http.port=11080
+quarkus.http.port=11081
 #
 # The HTTPS port
 #
