Added logger info to search results

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-an
 quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
 quarkus.flyway.migrate-at-start=true
 quarkus.log.file.enable=true
-quarkus.log.file.level=WARNING
+quarkus.log.file.level=INFO
 quarkus.log.file.path=logs/quarkus.log
 quarkus.log.file.rotation.max-file-size=5M
 quarkus.log.file.rotation.max-backup-index=5
