Added compression to the output

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -565,6 +565,7 @@ quarkus.http.port=11080
 # If gzip is enabled
 #
 #quarkus.resteasy.gzip.enabled=false
+quarkus.resteasy.gzip.enabled=true
 #
 # Maximum deflated file bytes size
 #
@@ -572,6 +573,7 @@ quarkus.http.port=11080
 # with status 413("Request Entity Too Large")
 #
 #quarkus.resteasy.gzip.max-input=10M
+quarkus.resteasy.gzip.max-input=30M
 #
 # Set this to override the default path for JAX-RS resources if there are no
 # annotated application classes.
