--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,12 +33,12 @@ quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd
 # The name of the application.
 # If not set, defaults to the name of the project.
 #
-#quarkus.application.name=
+quarkus.application.name=UDA-test-backend
 #
 # The version of the application.
 # If not set, defaults to the version of the project
 #
-#quarkus.application.version=
+quarkus.application.version=1.7
 #
 # If set to true '@Inject' is automatically added to all non-static fields that are annotated with
 # one of the annotations defined by {@link AutoInjectAnnotationBuildItem}.
