--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,8 @@ quarkus.log.file.rotation.max-file-size=5M
 quarkus.log.file.rotation.max-backup-index=5
 quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd
 
+quarkus.debug = false
+
 
 #
 # The name of the application.
