Added the production name and version and debug properties for prod properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,17 +28,18 @@ quarkus.log.file.rotation.max-file-size=5M
 quarkus.log.file.rotation.max-backup-index=5
 quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd
 
+quarkus.debug=false
 
 #
 # The name of the application.
 # If not set, defaults to the name of the project.
 #
-#quarkus.application.name=
+quarkus.application.name=UDA-Prod-backend
 #
 # The version of the application.
 # If not set, defaults to the version of the project
 #
-#quarkus.application.version=
+quarkus.application.version=1.7
 #
 # If set to true '@Inject' is automatically added to all non-static fields that are annotated with
 # one of the annotations defined by {@link AutoInjectAnnotationBuildItem}.
