--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'io.quarkus' version '1.0.0.CR2'
+    id 'io.quarkus' version '2.5.1.Final'
 }
 
 repositories {
@@ -16,9 +16,11 @@ dependencies {
     implementation 'io.quarkus:quarkus-jdbc-mariadb'
     implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-hibernate-orm-panache'
-    implementation 'io.quarkus:quarkus-hibernate-search-elasticsearch'
+    implementation 'io.quarkus:quarkus-hibernate-search-orm-elasticsearch'
     implementation 'io.quarkus:quarkus-flyway'
-    implementation 'io.quarkus:quarkus-hibernate-validator:2.5.1.Final'
+    implementation 'io.quarkus:quarkus-hibernate-validator'
+
+    implementation 'com.vladmihalcea:hibernate-types-52:2.14.0'
 
 //    implementation 'io.quarkus:quarkus-hibernate-orm'
 //    implementation 'org.jboss.jandex:jandex-maven-plugin'
