--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-quarkusVersion=1.0.0.CR2
+quarkusVersion=2.5.1.Final
 quarkusPlatformArtifactId=quarkus-universe-bom
-quarkusPlatformVersion=1.0.0.CR2
+quarkusPlatformVersion=2.5.1.Final
 quarkusPlatformGroupId=io.quarkus
