--- a/settings.gradle
+++ b/settings.gradle
@@ -4,12 +4,12 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
-    resolutionStrategy {
+    /*resolutionStrategy {
         eachPlugin {
             if (requested.id.id == 'io.quarkus') {
-                useModule("io.quarkus:quarkus-gradle-plugin:1.0.0.CR1")
+                useModule("io.quarkus:quarkus-gradle-plugin:2.5.1.Final")
             }
         }
-    }
+    }*/
 }
 rootProject.name = 'index'
