--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Configuration file
 # key = value
 # configure your datasource
-#quarkus.datasource.db-kind=mariadb
-#quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/voice_plugin_prod
-#quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
-#quarkus.datasource.username=test
-#quarkus.datasource.password=test
-#quarkus.hibernate-orm.dialect=org.hibernate.dialect.MariaDBDialect
+quarkus.datasource.db-kind=mariadb
+quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/voice_plugin_prod
+quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
+quarkus.datasource.username=test
+quarkus.datasource.password=test
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.MariaDBDialect
 # drop and create the database at startup (use `update` to only update the schema)
 #quarkus.hibernate-orm.database.generation=update
 
