--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # key = value
 # configure your datasource
 quarkus.datasource.db-kind=mariadb
-quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/voice_plugin_prod
+quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/voice_plugin
 quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
 quarkus.datasource.username=test
 quarkus.datasource.password=test
