--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # configure your datasource
 quarkus.datasource.db-kind=mariadb
 quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/voice_plugin_prod
-quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
+# quarkus.datasource.jdbc.driver=org.mariadb.jdbc.Driver
 quarkus.datasource.username=test
 quarkus.datasource.password=test
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.MariaDBDialect
