Added changes for keycloak properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -666,12 +666,12 @@ quarkus.resteasy.gzip.max-input=30M
 
 # OIDC Configuration
 # %prod.quarkus.oidc.auth-server-url=https://localhost:8543/realms/quarkus
-quarkus.oidc.auth-server-url=http://keycloak.nistapp/realms/UDAN
+quarkus.oidc.auth-server-url=https://keycloaktest.nistapp.ai/realms/UDAN
 quarkus.oidc.client-id=react-app
 # quarkus.oidc.credentials.secret=1y5AAogxfCsB4WB6XTB8YOL6KnTplZhn
 
 quarkus.keycloak.admin-client.enabled=true
-quarkus.keycloak.admin-client.server-url=http://keycloak.nistapp
+quarkus.keycloak.admin-client.server-url=https://keycloaktest.nistapp.ai
 quarkus.keycloak.admin-client.realm=udan
 quarkus.keycloak.admin-client.client-id=backend-service
 quarkus.keycloak.admin-client.client-secret=1y5AAogxfCsB4WB6XTB8YOL6KnTplZhn
