Added changes for keycloak properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -672,9 +672,9 @@ quarkus.oidc.client-id=react-app
 
 quarkus.keycloak.admin-client.enabled=true
 quarkus.keycloak.admin-client.server-url=https://keycloaktest.nistapp.ai
-quarkus.keycloak.admin-client.realm=udan
+quarkus.keycloak.admin-client.realm=UDAN
 quarkus.keycloak.admin-client.client-id=backend-service
-quarkus.keycloak.admin-client.client-secret=1y5AAogxfCsB4WB6XTB8YOL6KnTplZhn
+quarkus.keycloak.admin-client.client-secret=cXA2yFTq3ORQfrio2mGXttFaOTfvIC7N
 quarkus.keycloak.admin-client.username=admin
 quarkus.keycloak.admin-client.password=Pa55w0rd
 quarkus.keycloak.admin-client.grant-type=password
