Added changes for the multitenant configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-flyway'
     implementation 'io.quarkus:quarkus-hibernate-validator'
     implementation 'io.quarkus:quarkus-oidc'
-    implementation 'io.quarkus:quarkus-keycloak-authorization'
+//    implementation 'io.quarkus:quarkus-keycloak-authorization'
 
     implementation 'com.vladmihalcea:hibernate-types-52:2.14.0'
 
