Added changes for the test instance.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -666,11 +666,16 @@ quarkus.resteasy.gzip.max-input=30M
 
 # OIDC Configuration
 # Default tenant configuration
-quarkus.oidc.UDAN.auth-server-url=http://keycloaktest.nistapp/realms/UDAN
+quarkus.oidc.UDAN.auth-server-url=https://keycloaktest.nistapp.ai/realms/UDAN
 quarkus.oidc.UDAN.client-id=backend-service
-quarkus.oidc.UDAN.credentials.secret=5l0OgfPtI9Oi4ix2xQNU3pZCyKCiEHUn
+quarkus.oidc.UDAN.credentials.secret=cXA2yFTq3ORQfrio2mGXttFaOTfvIC7N
 
 # Tenant 'Entab' configuration
-quarkus.oidc.Entab.auth-server-url=http://keycloaktest.nistapp/realms/Entab
+quarkus.oidc.Entab.auth-server-url=https://keycloaktest.nistapp.ai/realms/Entab
 quarkus.oidc.Entab.client-id=backend-service
 quarkus.oidc.Entab.credentials.secret=md8rxuPu6ynUJyRjYvinoTsM8JHilpip
+
+# Tenant 'Redmine' configuration
+quarkus.oidc.Redmine.auth-server-url=https://keycloaktest.nistapp.ai/realms/Entab
+quarkus.oidc.Redmine.client-id=redmine
+quarkus.oidc.Redmine.credentials.secret=Irk0O1BR2M7RSyWchVqfFsBjUaNGkYJI
