Added changes for the test instance for Entab.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -665,6 +665,8 @@ quarkus.resteasy.gzip.max-input=30M
 #quarkus.transaction-manager.xa-node-name=
 
 # OIDC Configuration
+quarkus.oidc.auth-server-url=https://keycloaktest.nistapp.ai/realms/UDAN
+
 # Default tenant configuration
 quarkus.oidc.UDAN.auth-server-url=https://keycloaktest.nistapp.ai/realms/UDAN
 quarkus.oidc.UDAN.client-id=backend-service
