Added changes for the test instance for Redmine.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -678,6 +678,6 @@ quarkus.oidc.Entab.client-id=backend-service
 quarkus.oidc.Entab.credentials.secret=rdHW1k8BcyGfLsWtsjqQbpF56J1BcU2X
 
 # Tenant 'Redmine' configuration
-quarkus.oidc.Redmine.auth-server-url=https://keycloaktest.nistapp.ai/realms/Entab
+quarkus.oidc.Redmine.auth-server-url=https://keycloaktest.nistapp.ai/realms/Redmine
 quarkus.oidc.Redmine.client-id=redmine
 quarkus.oidc.Redmine.credentials.secret=Irk0O1BR2M7RSyWchVqfFsBjUaNGkYJI
