Added changes for the properties overloading

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -665,12 +665,4 @@ quarkus.resteasy.gzip.max-input=30M
 #quarkus.transaction-manager.xa-node-name=
 
 # OIDC Configuration
-# Default tenant configuration
-quarkus.oidc.UDAN.auth-server-url=http://keycloaktest.nistapp/realms/UDAN
-quarkus.oidc.UDAN.client-id=backend-service
-quarkus.oidc.UDAN.credentials.secret=5l0OgfPtI9Oi4ix2xQNU3pZCyKCiEHUn
-
-# Tenant 'Entab' configuration
-quarkus.oidc.Entab.auth-server-url=http://keycloaktest.nistapp/realms/Entab
-quarkus.oidc.Entab.client-id=backend-service
-quarkus.oidc.Entab.credentials.secret=md8rxuPu6ynUJyRjYvinoTsM8JHilpip
+quarkus.oidc.auth-server-url=https://keycloaktest.nistapp.ai/realms/UDAN
