--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,23 @@ quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=write-s
 quarkus.hibernate-search-orm.schema-management.strategy=drop-and-create
 quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status=yellow
 quarkus.flyway.migrate-at-start=true
+
+# Configure the logging
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n
+quarkus.log.console.level=INFO
+
+# File logging
 quarkus.log.file.enable=true
 quarkus.log.file.level=INFO
 quarkus.log.file.path=logs/quarkus.log
+quarkus.log.file.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n
 quarkus.log.file.rotation.max-file-size=5M
 quarkus.log.file.rotation.max-backup-index=5
 quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd
+
+# Configure categories
+quarkus.log.category."com.nistapp.uda".level=DEBUG
 
 quarkus.debug=false
 
