docs: create CONVENTIONS.md
Closes #4

fix: correct typo in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ quarkusVersion=2.5.1.Final
 quarkusPlatformArtifactId=quarkus-universe-bom
 quarkusPlatformVersion=2.5.1.Final
 quarkusPlatformGroupId=io.quarkus
+org.gradle.java.home=/usr/lib/jvm/java-17-openjdk
